--- a/index.html
+++ b/index.html
@@ -125,17 +125,17 @@
 
       <form>
         <div class="form-group mb-4">
-          <label class="mb-2">Nombre</label>
+          <label class="mb-2 text-white">Nombre</label>
           <input class="form-control" placeholder="Nombre" />
         </div>
 
         <div class="form-group mb-4">
-          <label class="mb-2">Correo electrónico</label>
+          <label class="mb-2 text-white">Correo electrónico</label>
           <input class="form-control" placeholder="Correo electrónico" />
         </div>
 
         <div class="form-group">
-          <label class="mb-2">mensaje</label>
+          <label class="mb-2 text-white">mensaje</label>
           <textarea
             class="form-control"
             placeholder="Escribe aquí tu mensaje"
