cambio en parrafo

--- a/index.html
+++ b/index.html
@@ -79,11 +79,7 @@
     <section id="Acerca-de-mi" class="container-fluid main text-center my-5">
       <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
       <p class="my-4">
-        Mi nombre es Manuel Horta y soy un desarrollador web junior de Alfa
-        Tecnologías. Soy un codificador y programador experto, y disfruto usar
-        mis habilidades para contribuir a los emocionantes avances tecnológicos
-        que ocurren todos los días en nuestra empresa. ademas me gusta
-        fotografiar platillos.
+        Mi nombre es Manuel Horta desarrollador Full Stack soy la persona acargo de construir, desarrollar, mantener, y manejar todo en sí, el Front End, con todo el diseño de un sitio web para que sea amistoso, atractivo, y cool, y por el otro lado el Back End
       </p>
       <div class="row">
         <div class="col-12 col-md-4">
