--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </section>
 
     <footer class="bg-dark text-center text-light p-2">
-      <p class="mb-0"> Manuel Horta's © Todos los derechos reservados.</p>
+      <p class="mb-0"> © Manuel Horta's Todos los derechos reservados.</p>
     </footer>
   </body>
 </html>
