Se modifica el márgen de acerca de mi por Padding para dar mejor espacio

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
         </div>
       </div>
     </header>
-    <section id="Acerca-de-mi" class="container-fluid main text-center my-5">
+
+    <section id="Acerca-de-mi" class="container-fluid main text-center py-5">
       <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
       <p class="my-4">
         Mi nombre es Manuel Horta desarrollador Full Stack soy la persona acargo de construir, desarrollar, mantener, y manejar todo en sí, el Front End, con todo el diseño de un sitio web para que sea amistoso, atractivo, y cool, y por el otro lado el Back End
